--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -720,6 +720,10 @@ zz_deployed23 <- unique(filter(data_23, wshed == "ZZ")$ID)
 ZZ_IDs <- intersect(zz_deployed24, zz_deployed23)
 
 
+detach("package:fitdistrplus")
+detach("package:MASS")
+
+
 bind24 <- data_24 %>% 
   select(datetime, number, wshed, binary, mins) %>% 
   rename("ID" = number)
@@ -3160,14 +3164,6 @@ alldat3 %>% group_by(iteration) %>%
   theme_classic()
 
 ```
-
-
-##find times when the network goes from very dry to very wet
-```{r}
-#plot the number of sensors activated through time
-
-```
-
 
 Try for a sequence of 3 times- also shows that this systematic wetting is very common
 ```{r window3}
@@ -7371,3 +7367,89 @@ final <- paste0(signif(avg, 2)," +/- ",signif(sd, 2))
 w3_boot <- boot("W3", 100, 0.9)
 ```
 
+#Determine the wettest and driest times for each watershed
+```{r}
+#make binary columns for wet and dry
+rbind(input_w3, input_fb, input_zz)
+
+
+df1 <- input_w3 %>% 
+  group_by(datetime) %>% 
+  summarise("percent_flowing" = sum(binary)/length(binary)) %>% 
+  filter(percent_flowing == 0) %>% 
+  mutate(date = date(datetime)) %>% 
+  select(-datetime, -percent_flowing) %>% unique() %>% 
+  rowid_to_column("dry_ID") %>% 
+  rename("dry_date" = date)
+
+df2 <- input_w3 %>% 
+  group_by(datetime) %>% 
+  summarise("percent_flowing" = sum(binary)/length(binary)) %>% 
+  filter(percent_flowing == 1) %>% 
+  mutate(date = date(datetime)) %>% 
+  select(-datetime, -percent_flowing) %>% unique()%>% 
+  rowid_to_column("wet_ID") %>% 
+  rename("wet_date" = date)
+
+#dataframe that tells us when the network went from fully dry to fully wet and vice versa
+cross_join(df1, df2) %>% 
+  mutate(difference = wet_date - dry_date) %>% 
+  group_by(dry_date) %>% 
+  filter(abs(difference) == min(abs(difference))) %>% 
+  filter(abs(difference) <= 10 )
+  #summarise(min = min(difference),
+   #         max = max(difference)
+
+
+f1 <- Vectorize(function(x, y) list(as.numeric(difftime(y, x, units = "d"))))
+outer(df1$date, df2$date, FUN = f1)
+
+#maximum percentage of sensors flowing is 100%
+max(spots_flowing$percent_flowing)
+#times when stream was at it's maximum extent
+spots_flowing$datetime[spots_flowing$percent_flowing == max(spots_flowing$percent_flowing)]
+#minimum extent times
+min(spots_flowing$percent_flowing)
+no_flow <- spots_flowing$datetime[spots_flowing$percent_flowing == min(spots_flowing$percent_flowing)]
+
+
+filter(q_23_f, DATETIME %in% no_flow)
+
+
+spots_flowing$datetime[spots_flowing$percent_flowing == min(spots_flowing$percent_flowing)]
+
+#plots for the wettest times for each watershed
+plot_test <- filter(all_w3, 
+               datetime == "2023-07-03 15:20:00 EDT")
+
+ggplot()+
+  geom_tile(data=test, aes(x=x, y=y), fill = "lightgrey")+
+  geom_point(data = plot_test, aes(x = long, y = lat, color = wetdry), size = 2)+
+  scale_color_manual(drop = FALSE,
+                     values = binary,
+                    breaks = c("dry", "wet"),
+                    labels = c("No flow", "flowing"),
+                    name = ""
+                    )+
+  geom_text(data = plot_test, aes(x = long, y = lat,label = ID), hjust=-0.00025, vjust=0.00025)+
+  theme_void()+
+  labs(title = "Wettest extent in W3")+
+  coord_equal()
+#plot of the driest extent in W3
+
+plot_test <- filter(all_w3, 
+               datetime == "2023-09-21 16:00:00 EDT")
+ggplot()+
+  geom_tile(data=test, aes(x=x, y=y), fill = "lightgrey")+
+  geom_point(data = plot_test, aes(x = long, y = lat, color = wetdry), size = 2)+
+  scale_color_manual(drop = FALSE,
+                     values = binary,
+                    breaks = c("dry", "wet"),
+                    labels = c("No flow", "flowing"),
+                    name = ""
+                    )+
+  geom_text(data = plot_test, aes(x = long, y = lat,label = ID), hjust=-0.00025, vjust=0.00025)+
+  theme_void()+
+  labs(title = "Driest extent in W3")+
+  coord_equal()
+```
